--- a/install
+++ b/install
@@ -37,7 +37,7 @@ mirrorfiles() {
     mkdir -p ${BACKUPDIR}
 
     backup "bash/bashrc"        ".bashrc"
-    backup "tmux.conf"          ".tmux.conf"
+    backup "tmux/tmux.conf"     ".tmux.conf"
     backup "git/gitconfig"      ".gitconfig"
     backup "git/gitignore"      ".gitignore"
     backup "vim/vimrc"          ".vimrc"
